[gd_scene load_steps=6 format=2]

[ext_resource path="res://Items/Item.gd" type="Script" id=1]
[ext_resource path="res://font/Arcadepix Plus.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Description.tscn" type="PackedScene" id=3]
[ext_resource path="res://Items/item_icons/Iron Sword.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
<<<<<<< HEAD
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
=======
>>>>>>> 975870f479064bc9fd4525c5a97b9aaa4e95f42d
font_data = ExtResource( 2 )

[node name="Item" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="NameTag" parent="." instance=ExtResource( 3 )]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 76.0
margin_bottom = 0.0
mouse_filter = 2

[node name="Category" parent="NameTag" instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 12.0
margin_right = 0.0
margin_bottom = 25.0

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 7.0
margin_top = 8.0
margin_right = 28.0
margin_bottom = 25.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "99"

[connection signal="mouse_entered" from="Label" to="." method="_on_Label_mouse_entered"]
[connection signal="mouse_exited" from="Label" to="." method="_on_Label_mouse_exited"]
